[project]
name = "bit"
version = "0.1.0"
description = "Experimental AI agent project initializing a recursive state engine called Bit."
authors = [
    {name = "Emet",email = "emet@bytetheoretic.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
]

[tool.poetry]
name = "bit"
version = "0.1.0"
packages = [{ include = "bit" }]

[tool.poetry.scripts]
bit = "bit.cli:app"

[tool.poetry.group.dev.dependencies]
gitpython = "^3.1.44"
requests = "^2.32.4"
typer = "^0.16.0"
rich = "^14.0.0"
pydantic = "^2.11.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
